test/Fail/Issue5592-safe.err
Issue5592-safe.agda:3.1-13: error: [MissingDefinitions]
The following names are declared but lack a definition:
A

Issue5592-safe.agda:5.6-13: error: [ClashingDefinition]
Multiple definitions of A. Previous definition
A is in scope as
  * a postulate Issue5592-safe.A brought into scope by
    - its definition at Issue5592-safe.agda:3.6-7
Perhaps you meant to write
  'data A where'
at Issue5592-safe.agda:5.6-13?
In data definitions separate from their data declaration, the ':'
and type must be omitted
when scope checking the declaration
  data A : Set
